--- a/frontend/escolarsys-app/src/app/cursos/crear/crear.component.html
+++ b/frontend/escolarsys-app/src/app/cursos/crear/crear.component.html
@@ -12,24 +12,46 @@
       <textarea [(ngModel)]="curso.descripcion" name="descripcion" class="form-control"></textarea>
     </div>
 
-    <div class="mb-3" style="max-width: 400px;">
+    <div class="mb-3">
       <label class="form-label">Profesor</label>
-      <select [(ngModel)]="curso.profesorId" name="profesorId" class="form-select form-select-sm" required>
-        <option [ngValue]="null">Seleccione un profesor</option>
-        <option *ngFor="let prof of profesores" [ngValue]="prof.id">
-          {{ prof.nombre }} ({{ prof.email }})
+      <select [(ngModel)]="curso.profesorId" name="profesorId" class="form-select">
+        <option *ngFor="let profesor of profesores" [value]="profesor.id">
+          {{ profesor.nombre }}
         </option>
       </select>
     </div>
 
-    <!-- Estudiantes (multi-select) -->
-    <div class="mb-3">
-      <label class="form-label">Estudiantes</label>
-      <select multiple [(ngModel)]="curso.estudiantesIds" name="estudiantesIds" class="form-select">
-        <option *ngFor="let estudiante of estudiantes" [value]="estudiante.id">
-          {{ estudiante.nombre }}
-        </option>
-      </select>
+    <h5 class="mt-4">👩‍🎓 Asignar Estudiantes</h5>
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered mt-2">
+        <thead>
+          <tr>
+            <th style="width: 50px; text-align:center;">
+              <input
+                type="checkbox"
+                [(ngModel)]="selectAll"
+                name="selectAll"
+                (change)="toggleAllEstudiantes()"
+              />
+            </th>
+            <th>Nombre</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let est of estudiantes">
+            <td style="text-align:center;">
+              <input
+                type="checkbox"
+                [(ngModel)]="est.seleccionado"
+                name="est_{{ est.id }}"
+              />
+            </td>
+            <td>{{ est.nombre }}</td>
+            <td>{{ est.email }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     
