--- a/frontend/escolarsys-app/src/app/materias/list/list.component.html
+++ b/frontend/escolarsys-app/src/app/materias/list/list.component.html
@@ -1,29 +1,34 @@
-<h2>Materias</h2>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Descripción</th>
-      <th>Profesor</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let materia of materias">
-      <td>{{ materia.nombre }}</td>
-      <td>{{ materia.descripcion }}</td>
-      <td>{{ materia.profesorId }}</td>
-      <td>
-        <button class="btn btn-sm btn-primary me-2" >
-          <i class="fas fa-edit"></i> Editar
-        </button>
-        <button class="btn btn-sm btn-danger" >
-          <i class="fas fa-trash-alt"></i> Eliminar
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<button class="btn btn-success" >
-  <i class="fas fa-plus"></i> Agregar Materia
-</button>
+<div class="container mt-4">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h3>Materias</h3>
+    <a routerLink="/cursos/crear" class="btn btn-primary">
+      <i class="fas fa-plus"></i>Agregar Materia
+    </a>
+  </div>
+
+  <table class="table table-striped table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th>Nombre</th>
+        <th>Descripción</th>
+        <th>Profesor</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let materia of materias">
+        <td>{{ materia.nombre }}</td>
+        <td>{{ materia.descripcion }}</td>
+        <td>{{ materia.profesorId }}</td>
+        <td>
+          <button class="btn btn-sm btn-primary me-2">
+            <i class="fas fa-edit"></i> Editar
+          </button>
+          <button class="btn btn-sm btn-danger">
+            <i class="fas fa-trash-alt"></i> Eliminar
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
