--- a/frontend/escolarsys-app/src/app/layouts/main-layout/main-layout.component.html
+++ b/frontend/escolarsys-app/src/app/layouts/main-layout/main-layout.component.html
@@ -12,13 +12,25 @@
       <li class="nav-item">
         <a routerLink="/cursos" routerLinkActive="active" class="nav-link">
           <i class="bi bi-book"></i>
-          <span *ngIf="!isSidebarCollapsed">Cursos</span>
+          <span *ngIf="!isSidebarCollapsed">Gestión de cursos</span>
         </a>
       </li>
       <li class="nav-item">
         <a routerLink="/usuarios" routerLinkActive="active" class="nav-link">
           <i class="bi bi-person-plus"></i>
           <span *ngIf="!isSidebarCollapsed">Gestión de usuarios</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/materias" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-person-plus"></i>
+          <span *ngIf="!isSidebarCollapsed">Gestión de materias</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/grados" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-person-plus"></i>
+          <span *ngIf="!isSidebarCollapsed">Gestión de grados</span>
         </a>
       </li>
       <li class="nav-item">
