--- a/frontend/escolarsys-app/src/app/layouts/main-layout/main-layout.component.html
+++ b/frontend/escolarsys-app/src/app/layouts/main-layout/main-layout.component.html
@@ -23,13 +23,13 @@
       </li>
       <li class="nav-item">
         <a routerLink="/materias" routerLinkActive="active" class="nav-link">
-          <i class="bi bi-person-plus"></i>
+          <i class="bi bi-pencil-square"></i>
           <span *ngIf="!isSidebarCollapsed">Gestión de materias</span>
         </a>
       </li>
       <li class="nav-item">
         <a routerLink="/grados" routerLinkActive="active" class="nav-link">
-          <i class="bi bi-person-plus"></i>
+          <i class="bi bi-diagram-3"></i>
           <span *ngIf="!isSidebarCollapsed">Gestión de grados</span>
         </a>
       </li>
