--- a/frontend/escolarsys-app/src/app/usuarios/usuarios.component.html
+++ b/frontend/escolarsys-app/src/app/usuarios/usuarios.component.html
@@ -22,10 +22,10 @@
         <td><span class="badge bg-info text-dark">{{ u.role }}</span></td>
         <td class="text-center">
           <button class="btn btn-outline-warning btn-sm me-2" [routerLink]="['/usuarios/editar', u.id]">
-            <i class="bi bi-pencil-square"></i> Editar
+            <i class="bi bi-pencil-square"></i> 
           </button>
           <button class="btn btn-outline-danger btn-sm" (click)="eliminarUsuario(u.id)">
-            <i class="bi bi-trash"></i> Eliminar
+            <i class="bi bi-trash"></i> 
           </button>
         </td>
       </tr>
