--- a/frontend/escolarsys-app/src/app/cursos/lista/lista.component.html
+++ b/frontend/escolarsys-app/src/app/cursos/lista/lista.component.html
@@ -24,10 +24,10 @@
         <td>{{ curso.estudiantes?.length || 0 }}</td>
         <td class="text-center">
           <button class="btn btn-outline-warning btn-sm me-2" [routerLink]="['/cursos/editar', curso.id]">
-            <i class="bi bi-pencil-square"></i> Editar
+            <i class="bi bi-pencil-square"></i> 
           </button>
           <button class="btn btn-outline-danger btn-sm" (click)="eliminar(curso.id)">
-            <i class="bi bi-trash"></i> Eliminar
+            <i class="bi bi-trash"></i> 
           </button>
         </td>
       </tr>
